# FC-micro-videos-catalog

./: .gitignore  Cargo.toml  Dockerfile.dev  docker-compose.dev.yaml  docker-compose.test.yaml
.devcontainer/dev/: devcontainer.json
.devcontainer/test/: devcontainer.json  docker-compose.yml
.docker/: start.dev.sh
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs  state.rs
src/application/: mod.rs  use_case.rs
src/application/cast_member/: delete_cast_member.rs  mod.rs  save_cast_member.rs
src/application/category/: category_output.rs  delete_category.rs  get_category.rs  list_all_categories.rs  mod.rs  save_category.rs
src/application/genre/: delete_genre.rs  genre_output.rs  get_genre.rs  list_all_genres.rs  mod.rs  save_genre.rs
src/application/video/: delete_video.rs  get_video.rs  list_videos.rs  mod.rs  save_video.rs  video_output.rs
src/domain/: mod.rs
src/domain/cast_member/: aggregate.rs  cast_member_id.rs  cast_member_repository.rs  cast_member_type.rs  mod.rs  nested_cast_member.rs
src/domain/category/: aggregate.rs  category_id.rs  category_repository.rs  mod.rs  nested_category.rs
src/domain/genre/: aggregate.rs  genre_id.rs  genre_repository.rs  mod.rs  nested_genre.rs
src/domain/shared/: criteria.rs  entity.rs  errors.rs  mod.rs  notification.rs  repository.rs  value_object.rs
src/domain/video/: aggregate.rs  mod.rs  rating.rs  video_id.rs  video_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/elasticsearch/: cast_member_es_repository.rs  cast_member_mapper.rs  category_es_repository.rs  category_mapper.rs  es_mapping.rs  genre_es_repository.rs  genre_mapper.rs  mod.rs  video_es_repository.rs  video_mapper.rs
src/infrastructure/in_memory/: cast_member_in_memory_repository.rs  category_in_memory_repository.rs  genre_in_memory_repository.rs  mod.rs  soft_delete_criteria.rs  video_in_memory_repository.rs
src/infrastructure/testing/: es_helpers.rs  kafka_helpers.rs  mod.rs
src/kafka/: category_consumer.rs  category_handler.rs  cdc.rs  consumer.rs  mod.rs  retry.rs
tests/: category_es_repository_tests.rs  delete_cast_member_use_case_int_tests.rs  delete_category_use_case_int_tests.rs  es_integration.rs  genre_es_repository_tests.rs  get_category_use_case_int_tests.rs  get_genre_use_case_int_tests.rs  kafka_integration.rs  list_all_categories_use_case_int_tests.rs  save_cast_member_use_case_int_tests.rs  save_category_use_case_int_tests.rs
tests/es/: cast_member_es_repository.rs  delete_category_use_case.rs  delete_genre_use_case.rs  get_category_use_case.rs  list_all_genres_use_case.rs  save_genre_use_case.rs
tests/kafka/: category_consumer.rs
