[package]
name = "fc-micro-videos-catalog"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "API de catalogo de videos do projeto Codeflix - Rust edition"
license = "UNLICENSED"
readme = "README.md"
keywords = ["codeflix", "catalog", "axum", "elasticsearch"]
categories = ["web-programming"]

[lib]
name = "catalog"
path = "src/lib.rs"

[[bin]]
name = "catalog-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8"
axum-extra = { version = "0.12", features = ["query"] }

# Middleware / Service
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "timeout",
    "compression-gzip",
    "request-id",
    "util",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Elasticsearch (apenas versoes alpha disponiveis)
elasticsearch = { version = "8.19.0-alpha.1", default-features = true }

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Necessario para dyn Trait com async
async-trait = "0.1"

# HTTP types
http = "1"
url = "2"

# Testcontainers
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["elastic_search"] }

[dev-dependencies]
# Mocking
mockall = "0.14"

# Test utilities
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[lints.clippy]
# Lints de cargo (complementam os warn! do lib.rs)
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
